--- a/templates/main.html
+++ b/templates/main.html
@@ -43,7 +43,7 @@
 {% block footer %}
     <div class="footer">
         <div class="container">
-            <p class="text-muted">Lolious.com - All rights reserved</p>
+            <p class="text-muted">TravelRecommend.com - All rights reserved</p>
         </div>
     </div>
 {% endblock %}
